--- a/public/index.html
+++ b/public/index.html
@@ -68,11 +68,11 @@
             <h2>Aktifitas Organisasi</h2>
             <div class="slider">
                 <button class="prev">&#10094;</button>
-<div class="slides">
-    <img src="https://i.pravatar.cc/800?img=1" alt="Aktifitas 1" />
-    <img src="https://i.pravatar.cc/800?img=2" alt="Aktifitas 2" />
-    <img src="https://i.pravatar.cc/800?img=3" alt="Aktifitas 3" />
-</div>
+                <div class="slides">
+                    <img src="assets/aktifitas1.jpg" alt="Aktifitas 1" />
+                    <img src="assets/aktifitas2.jpg" alt="Aktifitas 2" />
+                    <img src="assets/aktifitas3.jpg" alt="Aktifitas 3" />
+                </div>
                 <button class="next">&#10095;</button>
             </div>
         </section>
@@ -81,57 +81,57 @@
         <section id="pengurus">
             <h2>Pengurus Organisasi</h2>
             <div class="pyramid-diagram">
-<div class="level level-1">
-    <div class="person">
-        <img src="https://i.pravatar.cc/200?img=10" alt="Ketua" />
-        <p>Ketua: Budi Santoso</p>
-    </div>
-</div>
-<div class="level level-2">
-    <div class="person">
-        <img src="https://i.pravatar.cc/200?img=11" alt="Wakil Ketua" />
-        <p>Wakil Ketua: Sari Dewi</p>
-    </div>
-    <div class="person">
-        <img src="https://i.pravatar.cc/200?img=12" alt="Sekretaris" />
-        <p>Sekretaris: Andi Wijaya</p>
-    </div>
-</div>
-<div class="level level-3">
-    <div class="person">
-        <img src="https://i.pravatar.cc/200?img=13" alt="Bendahara" />
-        <p>Bendahara: Rina Kusuma</p>
-    </div>
-    <div class="person">
-        <img src="https://i.pravatar.cc/200?img=14" alt="Anggota" />
-        <p>Anggota: Joko Susilo</p>
-    </div>
-    <div class="person">
-        <img src="https://i.pravatar.cc/200?img=15" alt="Anggota" />
-        <p>Anggota: Lina Marlina</p>
-    </div>
-</div>
+                <div class="level level-1">
+                    <div class="person">
+                        <img src="assets/pengurus1.jpg" alt="Ketua" />
+                        <p>Ketua: Budi Santoso</p>
+                    </div>
+                </div>
+                <div class="level level-2">
+                    <div class="person">
+                        <img src="assets/pengurus2.jpg" alt="Wakil Ketua" />
+                        <p>Wakil Ketua: Sari Dewi</p>
+                    </div>
+                    <div class="person">
+                        <img src="assets/pengurus3.jpg" alt="Sekretaris" />
+                        <p>Sekretaris: Andi Wijaya</p>
+                    </div>
+                </div>
+                <div class="level level-3">
+                    <div class="person">
+                        <img src="assets/pengurus4.jpg" alt="Bendahara" />
+                        <p>Bendahara: Rina Kusuma</p>
+                    </div>
+                    <div class="person">
+                        <img src="assets/pengurus5.jpg" alt="Anggota" />
+                        <p>Anggota: Joko Susilo</p>
+                    </div>
+                    <div class="person">
+                        <img src="assets/pengurus6.jpg" alt="Anggota" />
+                        <p>Anggota: Lina Marlina</p>
+                    </div>
+                </div>
             </div>
         </section>
 
         <!-- Media Sosial Organisasi -->
-<section id="media-sosial">
-    <h2>Media Sosial</h2>
-    <div class="social-media">
-        <a href="https://facebook.com/organisasi" target="_blank" aria-label="Facebook">
-            <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" />
-        </a>
-        <a href="https://twitter.com/organisasi" target="_blank" aria-label="Twitter">
-            <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" />
-        </a>
-        <a href="https://instagram.com/organisasi" target="_blank" aria-label="Instagram">
-            <img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram" />
-        </a>
-        <a href="https://linkedin.com/company/organisasi" target="_blank" aria-label="LinkedIn">
-            <img src="https://cdn-icons-png.flaticon.com/512/733/733561.png" alt="LinkedIn" />
-        </a>
-    </div>
-</section>
+        <section id="media-sosial">
+            <h2>Media Sosial</h2>
+            <div class="social-media">
+                <a href="https://facebook.com/organisasi" target="_blank" aria-label="Facebook">
+                    <img src="assets/facebook-icon.png" alt="Facebook" />
+                </a>
+                <a href="https://twitter.com/organisasi" target="_blank" aria-label="Twitter">
+                    <img src="assets/twitter-icon.png" alt="Twitter" />
+                </a>
+                <a href="https://instagram.com/organisasi" target="_blank" aria-label="Instagram">
+                    <img src="assets/instagram-icon.png" alt="Instagram" />
+                </a>
+                <a href="https://linkedin.com/company/organisasi" target="_blank" aria-label="LinkedIn">
+                    <img src="assets/linkedin-icon.png" alt="LinkedIn" />
+                </a>
+            </div>
+        </section>
     </main>
 
     <footer>
