Fix image references in index.html to match existing assets

--- a/public/index.html
+++ b/public/index.html
@@ -36,11 +36,11 @@
             <h2>Visi Misi Organisasi</h2>
             <div class="visi-misi-container">
                 <div class="visi">
-                    <img src="assets/visi.jpg" alt="Visi Organisasi" />
+                    <img src="assets/asn1.jpeg" alt="Visi Organisasi" />
                     <p>Visi organisasi kami adalah untuk menjadi pemimpin dalam inovasi dan pelayanan.</p>
                 </div>
                 <div class="misi">
-                    <img src="assets/misi.jpg" alt="Misi Organisasi" />
+                    <img src="assets/asn2.jpeg" alt="Misi Organisasi" />
                     <p>Misi kami adalah memberikan layanan terbaik dan berkontribusi pada masyarakat.</p>
                 </div>
             </div>
@@ -66,15 +66,15 @@
         <!-- Aktifitas Organisasi Image Slider -->
         <section id="aktifitas">
             <h2>Aktifitas Organisasi</h2>
-            <div class="slider">
-                <button class="prev">&#10094;</button>
-                <div class="slides">
-                    <img src="assets/aktifitas1.jpg" alt="Aktifitas 1" />
-                    <img src="assets/aktifitas2.jpg" alt="Aktifitas 2" />
-                    <img src="assets/aktifitas3.jpg" alt="Aktifitas 3" />
+                <div class="slider">
+                    <button class="prev">&#10094;</button>
+                    <div class="slides">
+                        <img src="assets/asn3.jpeg" alt="Aktifitas 1" />
+                        <img src="assets/asn4.jpeg" alt="Aktifitas 2" />
+                        <img src="assets/asn5.jpeg" alt="Aktifitas 3" />
+                    </div>
+                    <button class="next">&#10095;</button>
                 </div>
-                <button class="next">&#10095;</button>
-            </div>
         </section>
 
         <!-- Pengurus Organisasi Pyramid Diagram -->
@@ -82,10 +82,10 @@
             <h2>Pengurus Organisasi</h2>
             <div class="pyramid-diagram">
                 <div class="level level-1">
-                    <div class="person">
-                        <img src="assets/pengurus1.jpg" alt="Ketua" />
-                        <p>Ketua: Budi Santoso</p>
-                    </div>
+                <div class="person">
+                    <img src="assets/asn1.jpeg" alt="Ketua" />
+                    <p>Ketua: Budi Santoso</p>
+                </div>
                 </div>
                 <div class="level level-2">
                     <div class="person">
@@ -119,16 +119,16 @@
             <h2>Media Sosial</h2>
             <div class="social-media">
                 <a href="https://facebook.com/organisasi" target="_blank" aria-label="Facebook">
-                    <img src="assets/facebook-icon.png" alt="Facebook" />
+                    <img src="assets/asn1.jpeg" alt="Facebook" />
                 </a>
                 <a href="https://twitter.com/organisasi" target="_blank" aria-label="Twitter">
-                    <img src="assets/twitter-icon.png" alt="Twitter" />
+                    <img src="assets/asn2.jpeg" alt="Twitter" />
                 </a>
                 <a href="https://instagram.com/organisasi" target="_blank" aria-label="Instagram">
-                    <img src="assets/instagram-icon.png" alt="Instagram" />
+                    <img src="assets/asn3.jpeg" alt="Instagram" />
                 </a>
                 <a href="https://linkedin.com/company/organisasi" target="_blank" aria-label="LinkedIn">
-                    <img src="assets/linkedin-icon.png" alt="LinkedIn" />
+                    <img src="assets/asn4.jpeg" alt="LinkedIn" />
                 </a>
             </div>
         </section>
