--- a/public/index.html
+++ b/public/index.html
@@ -89,25 +89,25 @@
                 </div>
                 <div class="level level-2">
                     <div class="person">
-                        <img src="assets/pengurus2.jpg" alt="Wakil Ketua" />
+                        <img src="assets/asn2.jpeg" alt="Wakil Ketua" />
                         <p>Wakil Ketua: Sari Dewi</p>
                     </div>
                     <div class="person">
-                        <img src="assets/pengurus3.jpg" alt="Sekretaris" />
+                        <img src="assets/asn3.jpeg" alt="Sekretaris" />
                         <p>Sekretaris: Andi Wijaya</p>
                     </div>
                 </div>
                 <div class="level level-3">
                     <div class="person">
-                        <img src="assets/pengurus4.jpg" alt="Bendahara" />
+                        <img src="assets/asn4.jpeg" alt="Bendahara" />
                         <p>Bendahara: Rina Kusuma</p>
                     </div>
                     <div class="person">
-                        <img src="assets/pengurus5.jpg" alt="Anggota" />
+                        <img src="assets/asn5.jpeg" alt="Anggota" />
                         <p>Anggota: Joko Susilo</p>
                     </div>
                     <div class="person">
-                        <img src="assets/pengurus6.jpg" alt="Anggota" />
+                        <img src="assets/asn1.jpeg" alt="Anggota" />
                         <p>Anggota: Lina Marlina</p>
                     </div>
                 </div>
